// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transactions should render with 1`] = `
<div>
  <div
    class="p-10 mt-10 bg-theme-background"
  >
    <h2
      class="pb-4"
    >
      Transactions History
    </h2>
    <div
      class="sc-AxiKw jaovnp"
      role="table"
    >
      <table
        class="table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="text-xs text-left select-none text-theme-neutral-400"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  undefined"
              >
                <div
                  class="mr-1"
                >
                  Date
                </div>
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
            <th
              class="text-xs text-left select-none text-theme-neutral-400"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  invisible"
              >
                <div
                  class="mr-1"
                >
                  Type
                </div>
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
            <th
              class="text-xs text-left select-none text-theme-neutral-400"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  undefined"
              >
                <div
                  class="mr-1"
                >
                  Wallet Address
                </div>
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
            <th
              class="text-xs text-left select-none text-theme-neutral-400"
              colspan="1"
              data-testid="table__th--3"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  float-right"
              >
                <div
                  class="mr-1"
                >
                  Amount
                </div>
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
            <th
              class="text-xs text-left select-none text-theme-neutral-400"
              colspan="1"
              data-testid="table__th--4"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  float-right"
              >
                <div
                  class="mr-1"
                >
                  Fiat Value
                </div>
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        />
      </table>
    </div>
    <button
      class="sc-AxjAm gSuvFI w-full mt-10 mb-5"
      color="primary"
      type="button"
    >
      See more
    </button>
  </div>
</div>
`;

exports[`Transactions should render with with transactions 1`] = `
<div>
  <div
    class="p-10 mt-10 bg-theme-background"
  >
    <h2
      class="pb-4"
    >
      Transactions History
    </h2>
    <div
      class="sc-AxiKw jaovnp"
      role="table"
    >
      <table
        class="table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="text-xs text-left select-none text-theme-neutral-400"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  undefined"
              >
                <div
                  class="mr-1"
                >
                  Date
                </div>
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
            <th
              class="text-xs text-left select-none text-theme-neutral-400"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  invisible"
              >
                <div
                  class="mr-1"
                >
                  Type
                </div>
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
            <th
              class="text-xs text-left select-none text-theme-neutral-400"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  undefined"
              >
                <div
                  class="mr-1"
                >
                  Wallet Address
                </div>
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
            <th
              class="text-xs text-left select-none text-theme-neutral-400"
              colspan="1"
              data-testid="table__th--3"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  float-right"
              >
                <div
                  class="mr-1"
                >
                  Amount
                </div>
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
            <th
              class="text-xs text-left select-none text-theme-neutral-400"
              colspan="1"
              data-testid="table__th--4"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  float-right"
              >
                <div
                  class="mr-1"
                >
                  Fiat Value
                </div>
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="border-b cursor-pointer border-theme-neutral-200"
            data-testid="transaction__row"
          >
            <td
              class="w-48 py-1 text-sm text-theme-neutral-600"
            >
               
              17 Mar 2020 22:02:10
               
            </td>
            <td
              class="w-32 py-4 mt-1"
            >
              <div
                class="sc-AxhCb dqZRJJ border-theme-success-300 text-theme-success-400 -mr-1"
              >
                <div
                  class="sc-AxirZ RbXVX"
                  height="40"
                  width="40"
                >
                  <svg>
                    received.svg
                  </svg>
                </div>
              </div>
              <div
                class="sc-AxhCb eqgyTU"
              />
            </td>
            <td
              class="w-56 py-1"
            >
              <div
                class="inline-block truncate"
              >
                <span
                  class="text-theme-neutral-800 font-semibold max-w-24 flex-auto truncate mt-4 mr-1 text-sm"
                  data-testid="address__wallet-name"
                >
                  My Wallet
                </span>
                <span
                  class="text-theme-neutral-400 font-semibold text-sm"
                  data-testid="address__wallet-address"
                >
                  ASuusXSW9k...P6T9GQ3kqT
                </span>
              </div>
            </td>
            <td
              class="py-1 text-sm text-right"
            >
              <div
                class="sc-AxhUy htxNoL"
                color="success"
              >
                100 BTC
              </div>
            </td>
            <td
              class="w-32 py-1 text-sm text-right text-theme-neutral-500"
            >
              <div>
                1,000,000 USD
              </div>
            </td>
          </tr>
          <tr
            class="border-b cursor-pointer border-theme-neutral-200"
            data-testid="transaction__row"
          >
            <td
              class="w-48 py-1 text-sm text-theme-neutral-600"
            >
               
              17 Mar 2020 22:02:10
               
            </td>
            <td
              class="w-32 py-4 mt-1"
            >
              <div
                class="sc-AxhCb dqZRJJ border-theme-danger-200 text-theme-danger-400 -mr-1"
              >
                <div
                  class="sc-AxirZ RbXVX"
                  height="40"
                  width="40"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </div>
              <div
                class="sc-AxhCb eqgyTU"
              />
            </td>
            <td
              class="w-56 py-1"
            >
              <div
                class="inline-block truncate"
              >
                <span
                  class="text-theme-neutral-800 font-semibold max-w-24 flex-auto truncate mt-4 mr-1 text-sm"
                  data-testid="address__wallet-name"
                >
                  My Wallet
                </span>
                <span
                  class="text-theme-neutral-400 font-semibold text-sm"
                  data-testid="address__wallet-address"
                >
                  ASuusXSW9k...P6T9GQ3kqT
                </span>
              </div>
            </td>
            <td
              class="py-1 text-sm text-right"
            >
              <div
                class="sc-AxhUy gRLEpJ"
                color="danger"
              >
                - 100 BTC
              </div>
            </td>
            <td
              class="w-32 py-1 text-sm text-right text-theme-neutral-500"
            >
              <div>
                1,000,000 USD
              </div>
            </td>
          </tr>
          <tr
            class="border-b cursor-pointer border-theme-neutral-200"
            data-testid="transaction__row"
          >
            <td
              class="w-48 py-1 text-sm text-theme-neutral-600"
            >
               
              17 Mar 2020 22:02:10
               
            </td>
            <td
              class="w-32 py-4 mt-1"
            >
              <div
                class="sc-AxhCb dqZRJJ border-theme-success-300 text-theme-success-400 -mr-1"
              >
                <div
                  class="sc-AxirZ RbXVX"
                  height="40"
                  width="40"
                >
                  <svg>
                    received.svg
                  </svg>
                </div>
              </div>
              <div
                class="sc-AxhCb eqgyTU"
              />
            </td>
            <td
              class="w-56 py-1"
            >
              <div
                class="inline-block truncate"
              >
                <span
                  class="text-theme-neutral-800 font-semibold max-w-24 flex-auto truncate mt-4 mr-1 text-sm"
                  data-testid="address__wallet-name"
                >
                  My Wallet
                </span>
                <span
                  class="text-theme-neutral-400 font-semibold text-sm"
                  data-testid="address__wallet-address"
                >
                  ASuusXSW9k...P6T9GQ3kqT
                </span>
              </div>
            </td>
            <td
              class="py-1 text-sm text-right"
            >
              <div
                class="sc-AxhUy htxNoL"
                color="success"
              >
                100 BTC
              </div>
            </td>
            <td
              class="w-32 py-1 text-sm text-right text-theme-neutral-500"
            >
              <div>
                1,000,000 USD
              </div>
            </td>
          </tr>
          <tr
            class="border-b cursor-pointer border-theme-neutral-200"
            data-testid="transaction__row"
          >
            <td
              class="w-48 py-1 text-sm text-theme-neutral-600"
            >
               
              17 Mar 2020 22:02:10
               
            </td>
            <td
              class="w-32 py-4 mt-1"
            >
              <div
                class="sc-AxhCb dqZRJJ border-theme-danger-200 text-theme-danger-400 -mr-1"
              >
                <div
                  class="sc-AxirZ RbXVX"
                  height="40"
                  width="40"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </div>
              <div
                class="sc-AxhCb eqgyTU"
              />
            </td>
            <td
              class="w-56 py-1"
            >
              <div
                class="inline-block truncate"
              >
                <span
                  class="text-theme-neutral-800 font-semibold max-w-24 flex-auto truncate mt-4 mr-1 text-sm"
                  data-testid="address__wallet-name"
                >
                  My Wallet
                </span>
                <span
                  class="text-theme-neutral-400 font-semibold text-sm"
                  data-testid="address__wallet-address"
                >
                  ASuusXSW9k...P6T9GQ3kqT
                </span>
              </div>
            </td>
            <td
              class="py-1 text-sm text-right"
            >
              <div
                class="sc-AxhUy gRLEpJ"
                color="danger"
              >
                - 100 BTC
              </div>
            </td>
            <td
              class="w-32 py-1 text-sm text-right text-theme-neutral-500"
            >
              <div>
                1,000,000 USD
              </div>
            </td>
          </tr>
          <tr
            class="border-b cursor-pointer border-theme-neutral-200"
            data-testid="transaction__row"
          >
            <td
              class="w-48 py-1 text-sm text-theme-neutral-600"
            >
               
              17 Mar 2020 22:02:10
               
            </td>
            <td
              class="w-32 py-4 mt-1"
            >
              <div
                class="sc-AxhCb dqZRJJ border-theme-success-300 text-theme-success-400 -mr-1"
              >
                <div
                  class="sc-AxirZ RbXVX"
                  height="40"
                  width="40"
                >
                  <svg>
                    received.svg
                  </svg>
                </div>
              </div>
              <div
                class="sc-AxhCb eqgyTU"
              />
            </td>
            <td
              class="w-56 py-1"
            >
              <div
                class="inline-block truncate"
              >
                <span
                  class="text-theme-neutral-800 font-semibold max-w-24 flex-auto truncate mt-4 mr-1 text-sm"
                  data-testid="address__wallet-name"
                >
                  My Wallet
                </span>
                <span
                  class="text-theme-neutral-400 font-semibold text-sm"
                  data-testid="address__wallet-address"
                >
                  ASuusXSW9k...P6T9GQ3kqT
                </span>
              </div>
            </td>
            <td
              class="py-1 text-sm text-right"
            >
              <div
                class="sc-AxhUy htxNoL"
                color="success"
              >
                100 BTC
              </div>
            </td>
            <td
              class="w-32 py-1 text-sm text-right text-theme-neutral-500"
            >
              <div>
                1,000,000 USD
              </div>
            </td>
          </tr>
          <tr
            class="border-b cursor-pointer border-theme-neutral-200"
            data-testid="transaction__row"
          >
            <td
              class="w-48 py-1 text-sm text-theme-neutral-600"
            >
               
              17 Mar 2020 22:02:10
               
            </td>
            <td
              class="w-32 py-4 mt-1"
            >
              <div
                class="sc-AxhCb dqZRJJ border-theme-danger-200 text-theme-danger-400 -mr-1"
              >
                <div
                  class="sc-AxirZ RbXVX"
                  height="40"
                  width="40"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </div>
              <div
                class="sc-AxhCb eqgyTU"
              />
            </td>
            <td
              class="w-56 py-1"
            >
              <div
                class="inline-block truncate"
              >
                <span
                  class="text-theme-neutral-800 font-semibold max-w-24 flex-auto truncate mt-4 mr-1 text-sm"
                  data-testid="address__wallet-name"
                >
                  My Wallet
                </span>
                <span
                  class="text-theme-neutral-400 font-semibold text-sm"
                  data-testid="address__wallet-address"
                >
                  ASuusXSW9k...P6T9GQ3kqT
                </span>
              </div>
            </td>
            <td
              class="py-1 text-sm text-right"
            >
              <div
                class="sc-AxhUy gRLEpJ"
                color="danger"
              >
                - 100 BTC
              </div>
            </td>
            <td
              class="w-32 py-1 text-sm text-right text-theme-neutral-500"
            >
              <div>
                1,000,000 USD
              </div>
            </td>
          </tr>
          <tr
            class="border-b cursor-pointer border-theme-neutral-200"
            data-testid="transaction__row"
          >
            <td
              class="w-48 py-1 text-sm text-theme-neutral-600"
            >
               
              17 Mar 2020 22:02:10
               
            </td>
            <td
              class="w-32 py-4 mt-1"
            >
              <div
                class="sc-AxhCb dqZRJJ border-theme-success-300 text-theme-success-400 -mr-1"
              >
                <div
                  class="sc-AxirZ RbXVX"
                  height="40"
                  width="40"
                >
                  <svg>
                    received.svg
                  </svg>
                </div>
              </div>
              <div
                class="sc-AxhCb eqgyTU"
              />
            </td>
            <td
              class="w-56 py-1"
            >
              <div
                class="inline-block truncate"
              >
                <span
                  class="text-theme-neutral-800 font-semibold max-w-24 flex-auto truncate mt-4 mr-1 text-sm"
                  data-testid="address__wallet-name"
                >
                  My Wallet
                </span>
                <span
                  class="text-theme-neutral-400 font-semibold text-sm"
                  data-testid="address__wallet-address"
                >
                  ASuusXSW9k...P6T9GQ3kqT
                </span>
              </div>
            </td>
            <td
              class="py-1 text-sm text-right"
            >
              <div
                class="sc-AxhUy htxNoL"
                color="success"
              >
                100 BTC
              </div>
            </td>
            <td
              class="w-32 py-1 text-sm text-right text-theme-neutral-500"
            >
              <div>
                1,000,000 USD
              </div>
            </td>
          </tr>
          <tr
            class="border-b cursor-pointer border-theme-neutral-200"
            data-testid="transaction__row"
          >
            <td
              class="w-48 py-1 text-sm text-theme-neutral-600"
            >
               
              17 Mar 2020 22:02:10
               
            </td>
            <td
              class="w-32 py-4 mt-1"
            >
              <div
                class="sc-AxhCb dqZRJJ border-theme-danger-200 text-theme-danger-400 -mr-1"
              >
                <div
                  class="sc-AxirZ RbXVX"
                  height="40"
                  width="40"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </div>
              <div
                class="sc-AxhCb eqgyTU"
              />
            </td>
            <td
              class="w-56 py-1"
            >
              <div
                class="inline-block truncate"
              >
                <span
                  class="text-theme-neutral-800 font-semibold max-w-24 flex-auto truncate mt-4 mr-1 text-sm"
                  data-testid="address__wallet-name"
                >
                  My Wallet
                </span>
                <span
                  class="text-theme-neutral-400 font-semibold text-sm"
                  data-testid="address__wallet-address"
                >
                  ASuusXSW9k...P6T9GQ3kqT
                </span>
              </div>
            </td>
            <td
              class="py-1 text-sm text-right"
            >
              <div
                class="sc-AxhUy gRLEpJ"
                color="danger"
              >
                - 100 BTC
              </div>
            </td>
            <td
              class="w-32 py-1 text-sm text-right text-theme-neutral-500"
            >
              <div>
                1,000,000 USD
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <button
      class="sc-AxjAm gSuvFI w-full mt-10 mb-5"
      color="primary"
      type="button"
    >
      See more
    </button>
  </div>
</div>
`;
